-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 9.0.1
-
35df3812f (master), e0219fad4 (master)
If loading a file from source directory, breakpoints are not hit.
If a QML file is outside of the project, it seems to work.
To reproduce, edit the path in main.cpp to point to the source directory, then set breakpoint in console.log() line in it and try to debug.
For Gerrit Dashboard: QTCREATORBUG-28627 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
473100,2 | Debugger: Improve detection for the need of Qml Debugger | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
473101,1 | Debugger: Make debugger aspect more explicit | master | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
473401,2 | Debugger: Make debugger aspect more explicit | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |